# data-edge-dashboard

./: .gitignore  PRESENTATION.md  README.md  main.py  pyproject.toml  requirements.txt  streamlit_app.py
.github/instructions/: instructions.instructions.md
.streamlit/: config.toml
charts/: __init__.py  bar.py  base.py  multi_line.py  single_line.py
components/: bar.py  bar_forecast.py  chart_utils.py  image.py  line.py  markdown.py  multi_line.py  multi_line_forecast.py  single_line.py  single_line_forecast.py  table.py
components/area/: __init__.py  chart.py  forecast.py
components/bar/: __init__.py  chart.py  forecast.py
components/forecasting/: data_preparation.py
components/line/: __init__.py  chart.py  config.py  data.py  forecast.py  helpers.py
exploratory_analysis/: utils.py
exploratory_analysis/osei/: Utilization.ipynb
exploratory_analysis/pedro/: analysis.ipynb  regressor.py  samples.ipynb
resources/raw_data/: dim__hubspot_sales_pipeline_stages.csv  dim__notion_clients__anonymized.csv  dim__notion_hr__anonymized.csv  dim__notion_roles__anonymized.csv  dim__projects__anonymized.csv  dim_employees_anon.csv  fct__fortnox_invoices__anonymized.csv  fct__fortnox_supplier_invoices.csv  fct__hubspot_deals__anonymized.csv  fct__time_entries.csv  notion_roles_enddates.csv  stg_qbis__activity_time.csv  stg_qbis__project_activities.csv
ui/components/: __init__.py  charts.py  sample_charts.py
ui/components/charts_components/: bar.py  (+4 more)
utils/: chart_helpers.py  chart_loader.py  forecast.py  overview.py  static_tabs.py
utils/forecasting/: engine.py
(+60 files in other folders)
