[project]
name = "data-edge-dashboard"
version = "0.1.0"
description = "A dashboard for data analysis and forecasting using Streamlit, Altair, Prophet, and Pandas."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "prophet>=1.1.7",
    "streamlit>=1.50.0",
]
